--- a/package.json
+++ b/package.json
@@ -13,26 +13,27 @@
   "dependencies": {
     "next": "16.1.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
+    "@storybook/addon-a11y": "^10.1.10",
+    "@storybook/addon-docs": "^10.1.10",
+    "@storybook/addon-vitest": "^10.1.10",
+    "@storybook/nextjs-vite": "^10.1.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
-    "typescript": "^5",
-    "storybook": "^10.1.10",
-    "@storybook/nextjs-vite": "^10.1.10",
-    "@chromatic-com/storybook": "^4.1.3",
-    "@storybook/addon-vitest": "^10.1.10",
-    "@storybook/addon-a11y": "^10.1.10",
-    "@storybook/addon-docs": "^10.1.10",
-    "vite": "^7.3.0",
     "eslint-plugin-storybook": "^10.1.10",
-    "vitest": "^4.0.16",
     "playwright": "^1.57.0",
-    "@vitest/browser-playwright": "^4.0.16",
-    "@vitest/coverage-v8": "^4.0.16"
+    "storybook": "^10.1.10",
+    "typescript": "^5",
+    "vite": "^7.3.0",
+    "vitest": "^4.0.16"
   }
 }
